[package]
name = "hadusos"
version = "0.2.1"
edition = "2021"
license = "MIT"
description = "Half-duplex session over serial."
repository = "https://github.com/ZhiyaoMa98/hadusos-protocol"

authors = ["Zhiyao Ma"]

[dependencies]
static_assertions = "1.1.0"

[dependencies.crc32fast]
version = "1.4.2"
default-features = false

[dev-dependencies]
crossbeam = "0.8.4"
